--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -250,8 +250,7 @@ div.error {
     color: var(--error);
     border-radius: 4px;
     margin-top: 44px;
-    width: 100%;
-    margin-left: -10%;
+    width: calc(100% - 20px);
 }
 
 .del {
